@@ -44,6 +44,17 @@ CCDIR=`pwd`
 # Uncomment the following line if you have OutOfMemoryError errors
 # CC_OPTS="-Xms128m -Xmx256m"
 
+#--------------------------------------------
+# set JAVA_HOME on Mac OSX
+#--------------------------------------------
+case "`uname`" in
+  Darwin*)
+    if [ -z "$JAVA_HOME" ] ; then
+      JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
+    fi
+    ;;
+esac
+
 LIBDIR=$CCDIR/lib
 LAUNCHER=$LIBDIR/cruisecontrol-launcher.jar
 
